[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Rock/Rock2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Rock/Rock1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tree/Tree1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Snowman/Snowman2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Snowman/Snowman1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Tree/Tree2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Tree",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "Snowman",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Rock",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "Tree2",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Snowman2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Rock2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 3 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.550336, 1 )
colors = PoolColorArray( 0.607843, 0.678431, 0.717647, 1, 0.607843, 0.678431, 0.717647, 1, 0.607843, 0.678431, 0.717647, 0 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.61745, 1 )
colors = PoolColorArray( 0.85098, 0.627451, 0.4, 1, 0.85098, 0.627451, 0.4, 1, 0.85098, 0.627451, 0.4, 0 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.536913, 1 )
colors = PoolColorArray( 0.796078, 0.858824, 0.988235, 1, 0.796078, 0.858824, 0.988235, 1, 0.796078, 0.858824, 0.988235, 0 )

[node name="Obstacle" type="Node2D"]
script = ExtResource( 2 )

[node name="Skin1" type="Node2D" parent="."]

[node name="Skin2" type="Node2D" parent="Skin1"]

[node name="Skin3" type="Node2D" parent="Skin1/Skin2"]

[node name="ObstacleSprite" type="AnimatedSprite" parent="Skin1/Skin2/Skin3"]
position = Vector2( 0, -7 )
frames = SubResource( 1 )
animation = "Rock"

[node name="DamageArea" type="Area2D" parent="Skin1/Skin2/Skin3" groups=[
"obstacles",
]]
collision_layer = 2
collision_mask = 0

[node name="DamageCollision" type="CollisionShape2D" parent="Skin1/Skin2/Skin3/DamageArea"]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="Particles" type="Node2D" parent="."]

[node name="RockParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2( 0, -5 )
emitting = false
amount = 16
lifetime = 0.7
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 6.0
direction = Vector2( 0, -1 )
spread = 90.0
initial_velocity = 32.0
angle = 45.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="TreeParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2( 0, -10 )
emitting = false
amount = 16
lifetime = 0.7
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2( 0, -1 )
spread = 90.0
initial_velocity = 32.0
angle = 45.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )

[node name="SnowParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2( 0, -15 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 6, 10 )
gravity = Vector2( 0, 64 )
initial_velocity = 32.0
angle = 45.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 8 )
